deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  labels:
    apps: nginx
spec:
  selector:
    matchLabels:
      apps: nginx
  template:
    metadata:
      name: nginx-test
      labels:
        apps: nginx
    spec:
      containers:
      - name: nginx-test
        image: nginx
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
  labels:
    apps: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    apps: nginx
